# riscv-asm

./: .gitattributes  Cargo.toml  README.md  bors.toml  watch.sh
.github/workflows/: build.yml  check.yml  main.yml  test.yml  workflow.yml
scripts/: generate-opcode-encoding-diagrams.sh
src/: csr.rs  decode.rs  dis.rs  instr.rs  lib.rs
