[package]
name = "riscv-asm"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "riscv_asm"
path = "src/lib.rs"

[[bin]]
name = "dis"
path = "src/dis.rs"

[dependencies]
