[package]
name = "riscv-asm"
version = "0.0.1-wip"
description = "A WIP, simple-to-use assembler and disassembler for `riscv32i-unknown-none-elf` targets"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Chris--B/riscv-asm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "riscv_asm"
path = "src/lib.rs"

[[bin]]
name = "dis"
path = "src/dis.rs"

[dependencies]
goblin = "0.2"
gumdrop = "0.8"

[dev-dependencies]
pretty_assertions = " 0.6"
