[package]
name = "riscv-asm"
version = "0.0.2-wip"
description = "A WIP, simple-to-use assembler and disassembler for `riscv32i-unknown-none-elf` targets"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Chris--B/riscv-asm/"
documentation = "https://docs.rs/riscv-asm/"
readme = "README.md"
# We won't enable these until the crate is minimally functional.
# We don't want to show up in searches when we're useless. :)
# keywords = ["riscv", "assembler", "disassembler", "assembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "riscv_asm"
path = "src/lib.rs"

[[bin]]
name = "dis"
path = "src/bin/dis.rs"

[dependencies]
goblin = "0.2"
gumdrop = "0.8"

[dev-dependencies]
pretty_assertions = " 0.6"
